@@ -1,3 +1,8 @@
+2005-04-27  Lluis Sanchez Gual  <lluis@novell.com> 
+
+	* Gui/SourceEditorDisplayBinding.cs: Don't crash if the debugger
+	is not installed.
+
 2005-04-27  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* Gui/SourceEditorView.cs:
